--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,2 +1,4 @@
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+
+<meta name="msapplication-config" content="/favicon/browserconfig.xml"/>
