Enable Google Analytics.

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,3 +1,5 @@
+{{ template "_internal/google_analytics.html" . }}
+
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/fontawesome/css/all.min.css">
 
