--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,9 @@
 .title {
 	color: #363636;
 }
+.title.is-1 {
+	font-size: 2.5rem;
+}
 .hero-body .title.is-bold {
 	font-family: "Inter","BlinkMacSystemFont","Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 	color: #363636;
